# github-topic-checker

./: Cargo.toml  Makefile.toml
docs/: LICENSE.md  README.md
graphql/: list-repositories.graphql  schema.json
src/: main.rs
