[package]
name = "github-topic-checker"
version = "0.1.0"
authors = ["Matthew M. Keeler <keelerm84@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
graphql_client = "0.9.0"
reqwest = { version = "0.11.3", features = ["json", "blocking"] }
serde = "1.0.125"
